ingress/scratch/conference-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: conference-app-svc
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    run: conference-app-ingress
  sessionAffinity: None
  type: NodePort
