ingress/scratch/conference-app-ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conference-app-simple-ingress
spec:
  rules:
  - http:
      paths:
      - path: / 
        backend:
          serviceName: conference-app-svc
          servicePort: 80
